[package]
name = "onlykey-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.28", features = ["derive"] }
hex = "0.4.3"
hidapi = "2.6.3"
hidreport = "0.5.0"
log = "0.4.25"
nusb = "0.1.12"
pretty_env_logger = "0.5.0"
rand = { version = "0.9.0", features = ["serde"] }
rand_chacha = { version = "0.9.0", features = ["os_rng", "serde"] }
serde = { version = "1.0.218", features = ["derive"] }
strum = { version = "0.27.1", features = ["derive"] }
