[package]
name = "onlykey-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.28", features = ["derive"] }
hex = "0.4.3"
hidapi = "2.6.3"
hidreport = "0.5.0"
libcrux-sha2 = "0.0.2-beta.3"
libcrux-traits = "0.0.2-beta.3"
log = "0.4.25"
nusb = "0.1.12"
pretty_env_logger = "0.5.0"
rand = { version = "0.9.0", features = ["serde"] }
rand_chacha = { version = "0.9.0", features = ["os_rng", "serde"] }
regex = "1.11.1"
serde = { version = "1.0.218", features = ["derive"] }
strum = { version = "0.27.1", features = ["derive"] }

[dev-dependencies]
cargo-watch = "8.5.3"
